--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,19 +1,24 @@
-<h1>Games#new</h1>
-<p>Find me in app/views/games/new.html.erb</p>
+#<h1>Games#new</h1>
+#<p>Find me in app/views/games/new.html.erb</p>
 
-<% @letters.each do |letter| %>
-  <button><%= letter %></button>
+
+<h1>New game</h1>
+
+<ul class="letters">
+  <% @letters.each do |letter| %>
+    <li><%= letter %></li>
   <% end %>
+</ul>
 
-  <h2>What is the longest word you can find?</h2>
+<p class="form-prefix">What is the longest word you can find?</p>
 
-  <div>
-
-   <form action="/score" method="post">
-    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-    <input type="text" name="new_word" placeholder="new_word">
-    <input type="submit" name="play" placeholder="play">
-  </form>
-
-</div>
-
+<form action="/score" method="POST" class="form-inline">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= hidden_field_tag :letters, @letters %>
+  <div class="input-group input-group">
+    <input type="text" name="word" class="form-control">
+    <span class="input-group-btn">
+      <input type="submit" value="Play" class="btn btn-default">
+    </span>
+  </div>
+</form>
